syntax = "proto3";
package Need4Protocol;

message ActivityResponse {
	repeated ActivityDetails activities = 1;
}

message ActivityDetails {
	int32 id = 1;
	string name = 2;
	string category = 3;
	string method = 4;
}

